# agent-office

./: AGENTS.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  change_log.md  comment-policy.md  error_log.md  implement.md  logs.md  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_plan.md  start-dev.sh  vitest.config.mjs
.github/workflows/: ci-behavior.yml  ci-demos.yml  ci-examples.yml  ci-superdoc.yml  pickled.yml  pr-renderer-build.yml  promote-stable.yml  visual-test.yml
Docx/: AI in family Law.docx  Design & IP notes summary.docx  Design & IP notes.docx  FIIT collaborations.docx  OSS_JSW_One_Draft (1).docx  eDC, IIT Delhi — Recruitment Task _ Startup Support Vertical (2025).docx
apps/cli/: package.json
apps/desktop/: IMPLEMENTATION.md  document-session.js  ipc.js  main.js  package.json  preload.js  store.js
apps/mcp/: .releaserc.cjs  package.json
causualdocx/: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  CROSS_EDITOR_CONSISTENCY.md  Dockerfile  NOTICE  README.md  change_log.md  docker-compose.yml  error_log.md
causualdocx/backend/docpatch-kernel/: Cargo.toml
causualdocx/backend/docpatch-kernel/src/: diff.rs  docmap.rs  docx_reader.rs  foldermap.rs  index_persistence.rs  index_store.rs  locator.rs  main.rs  search.rs  types.rs  xml_parser.rs
demos/: manifest.json
examples/: README.md  manifest.json
scripts/: check-public-contract.mjs  validate-examples-demos.ts
superdoc engine/: .dockerignore  brand.md  change_log.md  context7.json  tsconfig.base.json  vitest.baseConfig.ts
vscode/: package.json
(+903 files in other folders)
