[package]
name = "docpatch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
anyhow = "1.0"
thiserror = "2.0"
similar = "2.6"
zip = "2.2"
quick-xml = "0.36"
blake3 = "1.5"
